--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <meta
       name="MAHANAND"
     />
+    <meta
+    http-equiv="Content-Security-Policy" content="
+    frame-src https://*.stripe.com;
+    img-src 'self'  https://*.stripe.com
+    "
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
