--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
     />
     <meta
     http-equiv="Content-Security-Policy" content="
-    frame-src https://*.stripe.com;
-    img-src 'self'  https://*.stripe.com
+    frame-src https://*.stripe.com https://*.firebaseapp.com/;
+    img-src 'self'  https://*.stripe.com;
+    
     "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
