--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta
     http-equiv="Content-Security-Policy" content="
     frame-src https://*.stripe.com https://*.firebaseapp.com/;
-    img-src 'self'  https://*.stripe.com;
+    img-src 'self'  https://*.stripe.com  https://*.ibb.co/    ;
     
     "
     />
